// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render maintainability correctly: sqale rating 1`] = `
<Fragment>
  metric.sqale_rating.tooltip.B.5.0%
</Fragment>
`;

exports[`should render maintainability correctly: sqale rating A 1`] = `
<Fragment>
  metric.sqale_rating.tooltip.A.5.0%
</Fragment>
`;

exports[`should render maintainability correctly: sqale rating default grid 1`] = `
<Fragment>
  metric.sqale_rating.tooltip.B.0.0%
</Fragment>
`;

exports[`should render maintainability correctly: sqale rating wrong grid 1`] = `
<Fragment>
  metric.sqale_rating.tooltip.B.0.0%
</Fragment>
`;

exports[`should render other ratings correctly: new security rating 1`] = `
<Fragment>
  metric.security_rating.tooltip.B
</Fragment>
`;

exports[`should render other ratings correctly: security rating 1`] = `
<Fragment>
  metric.security_rating.tooltip.B
</Fragment>
`;
